[gd_scene load_steps=10 format=3 uid="uid://bbbiu8ou52nmt"]

[ext_resource type="Script" uid="uid://b8jhelo4ovpd1" path="res://Scripts/UI/Inventory/inventory.gd" id="1_1timk"]
[ext_resource type="PackedScene" uid="uid://bdpc5j2mvdovi" path="res://Scenes/UI/Inventory/item_slot.tscn" id="2_hk6h4"]
[ext_resource type="Resource" uid="uid://cm7g5mjsok0q5" path="res://Items/fire_orb.tres" id="3_xrb7y"]
[ext_resource type="Resource" uid="uid://c2f4m1tu0vpb6" path="res://Items/Consumables/lice_orb.tres" id="4_xlrl6"]
[ext_resource type="PackedScene" uid="uid://4h170v4cwj67" path="res://Scenes/UI/Inventory/weapon_slot.tscn" id="5_74m3u"]
[ext_resource type="PackedScene" uid="uid://bqdkhdq1k5t0j" path="res://Scenes/UI/Inventory/aspect_slot.tscn" id="6_64eau"]
[ext_resource type="PackedScene" uid="uid://encvpxp077bd" path="res://Scenes/UI/Inventory/consumable_slot.tscn" id="7_buqpv"]
[ext_resource type="Texture2D" uid="uid://oby2itttta8i" path="res://Textures/inventory.png" id="8_drt42"]

[sub_resource type="BoxMesh" id="BoxMesh_g1tdo"]

[node name="Inventory" type="Control"]
visible = false
texture_filter = 1
layout_mode = 3
anchor_left = 0.118
anchor_top = 0.086
anchor_right = 0.889
anchor_bottom = 0.864
offset_left = 0.0639954
offset_top = 7.272
offset_right = -0.128052
offset_bottom = 15.128
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1timk")

[node name="Slots" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 639.0
offset_top = 13.0
offset_right = 870.0
offset_bottom = 500.0
theme_override_constants/separation = 97

[node name="ItemSlot1" parent="Slots" instance=ExtResource("2_hk6h4")]
layout_mode = 2
size_flags_vertical = 0
item = ExtResource("3_xrb7y")

[node name="ItemSlot2" parent="Slots" instance=ExtResource("2_hk6h4")]
layout_mode = 2
item = ExtResource("4_xlrl6")

[node name="ItemSlot3" parent="Slots" instance=ExtResource("2_hk6h4")]
layout_mode = 2

[node name="ItemSlot4" parent="Slots" instance=ExtResource("2_hk6h4")]
layout_mode = 2

[node name="ItemSlot5" parent="Slots" instance=ExtResource("2_hk6h4")]
layout_mode = 2

[node name="WeaponSlots" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 124.0
offset_right = 639.0
offset_bottom = 191.0
theme_override_constants/separation = 295
alignment = 1

[node name="Slot1" parent="WeaponSlots" instance=ExtResource("5_74m3u")]
layout_mode = 2

[node name="Slot2" parent="WeaponSlots" instance=ExtResource("5_74m3u")]
layout_mode = 2

[node name="AspectSlots1" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 208.0
offset_right = 241.0
offset_bottom = 248.0
theme_override_constants/separation = 134
alignment = 1

[node name="Slot1" parent="AspectSlots1" instance=ExtResource("6_64eau")]
layout_mode = 2

[node name="Slot2" parent="AspectSlots1" instance=ExtResource("6_64eau")]
layout_mode = 2

[node name="AspectSlots2" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 208.0
offset_right = 536.0
offset_bottom = 248.0
theme_override_constants/separation = 134
alignment = 1

[node name="Slot1" parent="AspectSlots2" instance=ExtResource("6_64eau")]
layout_mode = 2

[node name="Slot2" parent="AspectSlots2" instance=ExtResource("6_64eau")]
layout_mode = 2

[node name="Consumables" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 131.0
offset_top = 321.0
offset_right = 426.0
offset_bottom = 361.0
theme_override_constants/separation = 295
alignment = 1

[node name="Slot1" parent="Consumables" instance=ExtResource("7_buqpv")]
layout_mode = 2

[node name="Slot2" parent="Consumables" instance=ExtResource("7_buqpv")]
layout_mode = 2

[node name="OptionsMenu" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MeshInstance2D" type="MeshInstance2D" parent="OptionsMenu"]
self_modulate = Color(1, 0.764706, 0.0588235, 1)
position = Vector2(324, 422)
scale = Vector2(632, 4)
mesh = SubResource("BoxMesh_g1tdo")

[node name="Item" type="Sprite2D" parent="OptionsMenu"]
position = Vector2(326, 450)
scale = Vector2(1.715, 1.715)

[node name="Label" type="Label" parent="OptionsMenu"]
layout_mode = 0
offset_left = 16.0
offset_top = 476.0
offset_right = 1416.0
offset_bottom = 537.0
scale = Vector2(0.44, 0.44)
theme_override_font_sizes/font_size = 41
horizontal_alignment = 1
text_overrun_behavior = 4

[node name="Equip1" type="Button" parent="OptionsMenu"]
layout_mode = 0
offset_left = 23.0
offset_top = 457.0
offset_right = 1645.0
offset_bottom = 788.0
scale = Vector2(0.07, 0.07)
theme_override_font_sizes/font_size = 236
disabled = true
text = "Equip to slot 1"

[node name="Equip2" type="Button" parent="OptionsMenu"]
layout_mode = 0
offset_left = 156.0
offset_top = 457.0
offset_right = 1778.0
offset_bottom = 788.0
scale = Vector2(0.07, 0.07)
theme_override_font_sizes/font_size = 236
disabled = true
text = "Equip to slot 2"

[node name="Unequip" type="Button" parent="OptionsMenu"]
layout_mode = 0
offset_left = 388.0
offset_top = 454.0
offset_right = 1917.0
offset_bottom = 785.0
scale = Vector2(0.07, 0.07)
theme_override_font_sizes/font_size = 236
disabled = true
text = "Unequip"

[node name="Drop" type="Button" parent="OptionsMenu"]
layout_mode = 0
offset_left = 512.0
offset_top = 454.0
offset_right = 2041.0
offset_bottom = 785.0
scale = Vector2(0.07, 0.07)
theme_override_font_sizes/font_size = 236
disabled = true
text = "Drop"

[node name="BG" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(440, 264)
scale = Vector2(13.88, 13.88)
texture = ExtResource("8_drt42")
metadata/_edit_lock_ = true

[connection signal="pressed" from="OptionsMenu/Equip1" to="." method="_on_equip_1_pressed"]
[connection signal="pressed" from="OptionsMenu/Equip2" to="." method="_on_equip_2_pressed"]
[connection signal="pressed" from="OptionsMenu/Unequip" to="." method="_on_unequip_pressed"]
[connection signal="pressed" from="OptionsMenu/Drop" to="." method="_on_drop_pressed"]
